# ghga-validator

./: .description.md  .mandatory_files_ignore  .pre-commit-config.yaml  .readme_template.md  .static_files_ignore  Dockerfile  README.md  config_schema.json  pyproject.toml  requirements-dev-common.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: pypi_publish.yaml
.pyproject_generation/: pyproject_custom.toml
.template/: mandatory_files_ignore.txt  static_files_ignore.txt
example_data/: example_data.json  example_data_not_unique_id.json  example_data_wrong_json_schema.json  example_data_wrong_ref.json  example_schema.yaml  example_schema_required.yaml
ghga_validator/: __init__.py  cli.py  schema_utils.py  utils.py
ghga_validator/core/: models.py  utils.py  validation.py  validator.py
ghga_validator/linkml/: object_iterator.py
ghga_validator/plugins/: __init__.py  backref_validation.py  base.py  jsonschema_validation.py  ref_validation.py  unique_identifier_validation.py  unique_validation.py  utils.py
lock/: requirements-dev.txt  requirements.txt
scripts/: update_readme.py
src/ghga_validator/: __init__.py  cli.py
src/ghga_validator/core/: models.py  (+2 more)
tests/: test_object_iterator.py  test_validate.py  test_validate_attribute.py  test_validate_backref.py  test_validate_empty.py  test_validate_empty_required.py  test_validate_inherited.py  test_validate_json_schema.py  test_validate_ref.py  test_validate_unique_id.py
(+21 files in other folders)
